feat: 🎸 [api] add feature to filter products by user
